Fix checkbox shrinking on mobile

--- a/src/static/assets/css/style.css
+++ b/src/static/assets/css/style.css
@@ -124,6 +124,7 @@
 }
 
 .wpcom-migration-input-group input[type='checkbox'] {
+	flex: none;
 	margin: 0;
 }
 
